--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Rizvi Fazi
 email: rizvifazi124@gmail.com
 description: Web Developer | Content Creator | SEO
-url: rizvifazi.github.io
+url:
 keywords: ["Portfolio", "Web","Development","SEO",]
 
 #
