--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ owner:
   foursquare: #username
   steam: #username
   dribbble: #username
-  youtube: rizvi124
+  youtube: 
   soundcloud: #username
   weibo: #username
   flickr: rizvi124
