--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ owner:
   youtube: 
   soundcloud: #username
   weibo: #username
-  flickr: rizvi124
+  flickr: /photos/rizvi124/
   500px: #username
   codepen: #username
   reddit: #username
