--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -7,3 +7,8 @@
   descr: "A simple class scheduling system developed using HTML,CSS and Javascript with a beautiful User interface"
   image: pong.png
   github: https://github.com/rizvifazi/class_scheduler/
+  
+  - name: Test Link
+  descr: "A simple class scheduling system developed using HTML,CSS and Javascript with a beautiful User interface"
+  image: pong.png
+  github: https://github.com/rizvifazi/class_scheduler/
