--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -9,6 +9,6 @@
   github: https://github.com/rizvifazi/class_scheduler/
   
   - name: Test Link
-  descr: "A simple class scheduling system developed using HTML,CSS and Javascript with a beautiful User interface"
+  descr: "Check Description"
   image: pong.png
-  github: https://github.com/rizvifazi/class_scheduler/
+  github: https://github.com
