--- a/_data/index/education.yml
+++ b/_data/index/education.yml
@@ -1,6 +1,6 @@
 - name: Eastern University of Sri Lanka
   link: http://esn.ac.lk/
-  date: 2017 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+  date: 2017 - 2021
   descr: <br> Undergraduate of BSc. Physical Science (expected graduation in 2021)
 
 - name: Imperial College Kandy
