--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,7 +1,7 @@
-- name: Railway Ticket Reservstion System
-  descr: "This is a mini Railway Ticket Resevation System which has the ability to reserve prefered seats and to calculate amount for tickets issued."
+- name: E-Commerce Website
+  descr: "This is an e-commerce website built using HTML, CSS , Bootstrap,PHP and MySQL"
   image: pong.png
-  github: https://github.com/rizvifazi/railway/
+  github: https://rizvifazi.github.io/e-commerce/
 
 - name: Class Scheduling System
   descr: "A simple class scheduling system developed using HTML,CSS and Javascript with a beautiful User interface"
