--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -4,7 +4,7 @@
   github: https://rizvifazi.github.io/e-commerce/
 
 - name: Class Scheduling System
-  descr: "A simple class scheduling system developed using HTML,CSS and Javascript with a beautiful User interface"
+  descr: "A simple Class Scheduling System developed to ease the task of allocating lecturers and lecture halls."
   image: pong.png
   github: https://github.com/rizvifazi/class_scheduler/
   
