--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -10,7 +10,12 @@
 #  date: May 2014 - July 2017
 #  job: Web Assistant
 
-- name: Fiverr
-  link: https://www.fiverr.com/
+- name: Freelance Developer
+  link: https://rizvifazi.github.io/
   date: 2020 - Present
-  job: Web Development Freelancer
+  job: Web/Software Development Freelancer
+  
+  - name: Freelance Graphic Designer
+  link: https://rizvifazi.github.io/
+  date: 2016 - 2020
+  job: Freelance Graphic Designer
