--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,6 +2,6 @@
 #Ability
 label: Programming
 id : cs
-aspects: C++, Java, Javascript, HTML/CSS, SQL, vb.NET
-percentage: 90, 80, 80, 80, 70, 90
+aspects: C#, Java, Javascript, HTML/CSS, SQL, Python
+percentage: 90, 80, 80, 80, 70, 70
 
