--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -10,6 +10,11 @@
 #  date: May 2014 - July 2017
 #  job: Web Assistant
 
+- name: Software Engineer
+  link: https://rizvifazi.github.io/
+  date: 2021 - Present
+  job: Software Engineer at HCLTech
+  
 - name: Freelance Developer
   link: https://rizvifazi.github.io/
   date: 2020 - Present
