--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -10,10 +10,10 @@
 #  date: May 2014 - July 2017
 #  job: Web Assistant
 
-- name: Software Engineer
-  link: https://rizvifazi.github.io/
+- name: HCLTech
+  link: https://www.hcltech.com/
   date: 2021 - Present
-  job: Software Engineer at HCLTech
+  job: Software Engineer
   
 - name: Freelance Developer
   link: https://rizvifazi.github.io/
