--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -17,7 +17,7 @@
   
 - name: Freelance Developer
   link: https://rizvifazi.github.io/
-  date: 2020 - Present
+  date: 2018 - 2021
   job: Web/Software Development Freelancer
   
 - name: Freelance Graphic Designer
